--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+certifi==2024.8.30
 click==8.1.7
 diff-match-patch==20230430
 Django==5.0.7
@@ -8,5 +9,7 @@ django-redis==5.4.0
 django-rq==2.10.2
 redis==5.0.8
 rq==1.16.2
+sentry-sdk==2.13.0
 sqlparse==0.5.1
 tablib==3.5.0
+urllib3==2.2.2
