--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-debug-toolbar==4.4.6
 django-import-export==4.1.1
 django-redis==5.4.0
 django-rq==2.10.2
+djangorestframework==3.15.2
 redis==5.0.8
 rq==1.16.2
 sentry-sdk==2.13.0
