--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.8.30
 click==8.1.7
 diff-match-patch==20230430
 Django==5.0.7
+django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-import-export==4.1.1
 django-redis==5.4.0
