--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.8.1
 certifi==2024.8.30
 click==8.1.7
+confusable-homoglyphs==3.3.1
 diff-match-patch==20230430
 Django==5.0.7
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-import-export==4.1.1
 django-redis==5.4.0
+django-registration==3.4
+django-registration-redux==2.13
 django-rq==2.10.2
 djangorestframework==3.15.2
+python-dotenv==1.0.1
 redis==5.0.8
 rq==1.16.2
 sentry-sdk==2.13.0
